--- a/package.json
+++ b/package.json
@@ -5,16 +5,19 @@
       "type": "module",
       "main": "server.js",
       "scripts": {
-            "test": "echo \"Error: no test specified\" && exit 1"
+            "test": "echo \"Error: no test specified\" && exit 1",
+            "dev": "node --watch server.js"
       },
       "author": "Dheeraj C Justine",
       "license": "ISC",
       "dependencies": {
+            "bcryptjs": "^2.4.3",
             "cloudinary": "^2.2.0",
             "cookie-parser": "^1.4.6",
             "cors": "^2.8.5",
             "dotenv": "^16.4.5",
             "express": "^4.19.2",
+            "jsonwebtoken": "^9.0.2",
             "mongoose": "^8.3.4",
             "morgan": "^1.10.0",
             "multer": "^1.4.5-lts.1"
